# ai-resume-analyzer

./: .gitignore  README.md  app.py  debug_search.py  gamma_presentation.md  presentation_outline.md  pyproject.toml  requirements.txt  tech_spec.md  test_enhanced_search.py
src/: db.py  external_search.py  llm_analyser.py  matcher.py  parser.py  scorer.py  utils.py
