[project]
name = "resume-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "docx2txt>=0.9",
    "duckduckgo-search>=8.1.1",
    "en-core-web-sm",
    "google-generativeai>=0.8.5",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "pip>=25.3",
    "pydantic>=2.12.5",
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.7",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.11",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "watchdog>=6.0.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
